--- a/templates/admin/orders.html
+++ b/templates/admin/orders.html
@@ -18,24 +18,29 @@
             </header>
             <div class="card-body">
                 <div class="row"> 
-                    <table class="table">
-                    
-                    <tr><th>Order No</th><th>Order Date</th><th>Order Items</th></tr>
-                    
-                    {% for order in orders %}
-                    
-                    <tr>
-                        <td>{{ order.order.order_number }}</td>
-                        <td>{{ order.order.created_at }}</td>
-                        <td>{{ order.order.status }}</td>
-                        <td>{{ order.product }}</td>
-                        <td>{{ order.quantity }}</td>
-                        <td>{{ order.product_price }}</td>
-                    </tr>
-                    
-
-
-                    {% endfor %}
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th scope="col">Order #</th>
+                                <th scope="col">Billing Name</th>
+                                <th scope="col">Phone</th>
+                                <th scope="col">Order Total</th>
+                                <th scope="col">Date</th>
+                                <th scope="col">Status</th>
+                            </tr>                                                                                                                                                
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                            <tr>
+                                <th scope="row"><a href="{% url 'order_update' order.order_number %}"> {{ order.order_number }}</a></th>
+                                <td> {{ order.full_name }} </td>
+                                <td> {{ order.phone }} </td>
+                                <td> {{ order.order_total }} </td>
+                                <td> {{ order.created_at }} </td>
+                                <td> {{ order.status }} </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
                     </table>
                 </div> <!-- row.// -->
             </div> <!-- card-body .// -->
