--- a/static/css/ui.css
+++ b/static/css/ui.css
@@ -1064,13 +1064,12 @@ a[class*=card]:hover .title {
 }
 
 .price-old {
-  color: #969696;
+  color: #4f5252;
   margin-left: 3px;
   margin-right: 3px;  
   text-decoration: line-through;
   text-decoration-color: red;
   font-style: italic;
-
 }
 
 .icon-control {
