--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -88,7 +88,7 @@
 <div class="row">
 	{% if products %}
     {% for product in products %}
-	<div class="col-md-4">
+	<div class="col-md-3">
 		<figure class="card card-product-grid">
 			<div class="img-wrap"> 
 				{% if product.discount > 0 %}
@@ -100,7 +100,7 @@
 			</div> <!-- img-wrap.// -->
 			<figcaption class="info-wrap">
 				<div class="fix-height">
-					<a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+					<a href="{{  product.slug  }}" class="title">{{ product.product_name }}</a>
 					<div class="price-wrap mt-2">
 					
 						{% if product.discount > 0 %}
